<resources>
    <string name="app_name">ToDoApp</string>
    <string name="regist_button">Registration</string>
    <string name="login_button">Login</string>
    <string name="button_name">ToDo</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="regist_name">YourName</string>
    <string name="regist_email">Email</string>
    <string name="regist_password">Password</string>
    <string name="hint_name">input your name</string>
    <string name="hint_email">input your email</string>
    <string name="hint_password">input your password</string>

    <string name="api_url">http://localhost/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
