<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="128dp" android:layout_marginBottom="400dp"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/regist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/registNameText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registName" android:hint="@string/hint_name"/>
        <TextView
                android:text="@string/regist_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/registEmailText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/registEmail" android:hint="@string/hint_email"/>
        <TextView
                android:text="@string/regist_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/registPasswordText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/registPassword" android:hint="@string/hint_password"/>
    </LinearLayout>
    <Button
            android:text="@string/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registOK" app:layout_constraintEnd_toStartOf="@+id/registCancel"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp" android:layout_marginBottom="281dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="71dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
    <Button
            android:text="@string/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registCancel" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/registOK" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="111dp" android:layout_marginBottom="281dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>